@@ -1,3 +1,8 @@
+2006-07-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gbase64.c: Fix typos in the docs.  (#346660, Mark
+	Drago)
+
 2006-07-03  Runa Bhattacharjee <runabh@gmail.com>
 
 	* configure.in: Added Bengali India (bn_IN) in ALL_LINGUAS.
