@@ -1,3 +1,8 @@
+2006-07-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/base64.sgml: Remove bogus reference
+	to nonexisting function.  (#346660, Mark Drago)
+	
 2006-07-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.12.0 ===
